hphp/test/quick/invoke.php.expectf
This is Normal
object(Normal)#1 (0) {
}
This is Weird
%ANULL
This is Weird2
object(Weird2)#1 (0) {
}
This is Weird3
object(Weird3)#1 (0) {
}
closure
%ANULL
static closure
%ANULL
About to fail:

Fatal error: Function name must be a string in %s on line 33
